--- a/electron-work/package.json
+++ b/electron-work/package.json
@@ -47,7 +47,7 @@
 			"icon": ""
 		},
 		"win": {
-			"icon": "shenzhou.png",
+			"icon": "",
 			"artifactName": "${productName}_setup_${version}.${ext}",
 			"target": [
 				"nsis"
